# krinj

./: .gitignore  README.md  cabal.project  issue-tracker.cabal  issues.cabal  krinj.cabal  makefile
app/: ApiV1.hs  Application.hs  Args.hs  Auth.hs  Config.hs  ContentTypes.hs  GenerateJsBindings.hs  JsBundle.hs  Language.hs  Main.hs  Model.hs  ObjectId.hs  Site.hs
app/IssueTracker/App/: GenerateJsBindings.hs  Init.hs  MakeAuthToken.hs  Web.hs
app/Issues/App/: GenerateJsBindings.hs  MakeAuthToken.hs  Web.hs
app/admin/: Main.hs
app/api/: Main.hs
app/dev-server/: Main.hs
app/init/: CommandLineArgs.hs  Main.hs
app/migrate/: CommandLineArgs.hs  Main.hs
client/: .eslintrc.js  .prettierrc  bundle.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: api.js  api.ts  api.tsx  app.tsx  hooks.ts  index.tsx  md-editor.tsx  model.d.ts  page-footer.tsx  page-header.tsx  project.tsx  projects.tsx  redux.tsx  root-page.tsx  test.tsx
client/src/components/: button.tsx  icons.tsx  index.tsx  inline-edit.tsx  input.tsx  loading.tsx  md-editor.tsx  modal.tsx  spacer.tsx  spinner.tsx
client/src/data/: action-types.ts  actions.ts  hooks.ts  index.ts  reducer.ts  selectors.ts  store.ts
client/src/issues/: index.tsx  table.tsx
client/src/project/: details-tab.tsx  index.tsx  issues-tab.tsx
client/src/projects/: index.tsx  new-project.tsx  table.tsx
client/src/projects/project/: details-tab.tsx  index.tsx  issues-tab.tsx
client/src/redux/: action-types.ts  actions.ts  index.ts  reducer.ts  selectors.ts
client/src/root/: footer.tsx  header.tsx  index.tsx  login.tsx  user-widget.tsx
client/types/: api.d.ts  index.d.ts
client/types/components/: carot.d.ts  icons.d.ts  index.d.ts  inline-edit.d.ts  input.d.ts  md-editor.d.ts  modal.d.ts  spacer.d.ts  spinner.d.ts
client/types/data/: action-types.d.ts  actions.d.ts  hooks.d.ts  index.d.ts  reducer.d.ts  selectors.d.ts  store.d.ts
client/types/projects/: new-project.d.ts  table.d.ts
client/types/projects/project/: details-tab.d.ts  index.d.ts  issues-tab.d.ts
client/types/root/: index.d.ts
common-types/: common-types.cabal
common-types/src/Krinj/: Config.hs
common-types/src/Krinj/Config/: DatabaseConfig.hs  Newtypes.hs
common-types/src/Krinj/Logger/: Types.hs
common-types/src/Krinj/UserService/: Types.hs
config/: default.json  localhost.json
dev-server/: dev-server.cabal
dev-server/app/: Main.hs
dev-server/app/DevServer/: Client.hs  Logger.hs  Server.hs
entity-service/: entity-service.cabal  model.sql
entity-service/migrations/: entity-service-0000-model.sql
entity-service/src/: EntityService.hs
entity-service/src/EntityService/: Class.hs  Instance.hs  Internal.hs
entity-service/src/EntityService/Internal/: Command.hs  Model.hs  Query.hs  Util.hs
entity-service/src/EntityService/Internal/Command/: Attributes.hs  Entities.hs  EntityTypes.hs  Projects.hs  Relationships.hs
entity-service/src/EntityService/Internal/Model/: Attributes.hs  Entities.hs  EntityTypes.hs  Newtypes.hs  Projects.hs  Relationships.hs
entity-service/src/EntityService/Internal/Query/: Attributes.hs  Entities.hs  EntityTypes.hs  Projects.hs  Relationships.hs
entity-service/src/Krinj/: EntityService.hs
entity-service/src/Krinj/EntityService/: Class.hs  Instance.hs  Internal.hs
entity-service/src/Krinj/EntityService/Internal/: Command.hs  Model.hs  Query.hs  Util.hs
entity-service/src/Krinj/EntityService/Internal/Command/: Attributes.hs  Entities.hs  EntityTypes.hs  Projects.hs  Relationships.hs
entity-service/src/Krinj/EntityService/Internal/Model/: Attributes.hs  Entities.hs  EntityTypes.hs  Newtypes.hs  Projects.hs  Relationships.hs
entity-service/src/Krinj/EntityService/Internal/Query/: Attributes.hs  Entities.hs  EntityTypes.hs  Projects.hs  Relationships.hs
entity-service/test/: Main.hs
env/: docker-compose.yaml  docker_pgadmin_servers.json  docker_postgres_init.sql
lib-old/IssueTracker/Lib/: BuildUtils.hs  Config.hs  ContentTypes.hs  Language.hs  Logger.hs  ObjectId.hs  TH.hs  UUID.hs
lib-old/IssueTracker/Lib/Language/: RunTime.hs
lib-old/IssueTracker/Lib/Model/: User.hs  Util.hs
lib-old/IssueTracker/Lib/Web/: ApiV1.hs  Application.hs  Bundles.hs  Options.hs  Site.hs
lib/IssueTracker/: BuildUtils.hs  Config.hs  DatabaseConnectionPool.hs  Logger.hs  Options.hs  TH.hs
lib/IssueTracker/Lib/: Auth.hs  BuildUtils.hs  Config.hs  ContentTypes.hs  GenerateJsBindings.hs  Language.hs  Logger.hs  Model.hs  ObjectId.hs  UUID.hs
lib/IssueTracker/Lib/Language/: AppL.hs  RunTime.hs
lib/IssueTracker/Lib/Model/: Comment.hs  Issue.hs  Project.hs  User.hs  Util.hs
lib/IssueTracker/Lib/Web/: ApiV1.hs  Application.hs  Bundles.hs  Options.hs  Site.hs
lib/IssueTracker/Web/: Application.hs  ContentTypes.hs  RouteHandler.hs  Routes.hs
lib/IssueTracker/Web/Routes/: Attributes.hs  Entities.hs  EntityTypes.hs  Projects.hs  Site.hs
lib/Issues/Lib/: Auth.hs  BuildUtils.hs  Config.hs  ContentTypes.hs  GenerateJsBindings.hs  Language.hs  Logger.hs  Model.hs  ObjectId.hs  TH.hs  UUID.hs
lib/Issues/Lib/Language/: AppL.hs  RunTime.hs
lib/Issues/Lib/Model/: Comment.hs  Issue.hs  Project.hs  User.hs  Util.hs
lib/Issues/Lib/Web/: ApiV1.hs  Application.hs  Bundles.hs  JsBundle.hs  Site.hs  (+1 more)
lib/Krinj/: BuildUtils.hs  Config.hs  DatabaseConnectionPool.hs  Logger.hs  Options.hs  TH.hs
lib/Krinj/Config/: DatabaseConfig.hs
lib/Krinj/Web/: Application.hs  Auth.hs  ContentTypes.hs  RequestContext.hs  RouteHandler.hs  Routes.hs
scripts/: create-issue  db.sh  delete-issue  get-issue  sign-up  update-issue
test-util/: test-util.cabal
test-util/src/Krinj/Test/: Util.hs
test-util/src/Krinj/Test/Util/: Minio.hs  PostgreSQL.hs  Redis.hs
user-service/: user-service.cabal
user-service/migrations/: user-service-0000-model.sql
user-service/src/Krinj/: UserService.hs
user-service/src/Krinj/UserService/: Class.hs  Command.hs  Hash.hs  Instance.hs  Model.hs  Query.hs  Types.hs
user-service/src/Krinj/UserService/Model/: Credentials.hs  Users.hs
user-service/test/: Main.hs
(+22 files in other folders)
