cabal-version:      3.8
name:               issue-tracker
version:            0.1.0.0

common shared-properties
    default-language: GHC2021
    ghc-options: -Wall
    build-depends:
        base < 5.0
    default-extensions:
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        GADTs,
        LambdaCase,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        RecordWildCards,
        TypeFamilies

library
    import: shared-properties
    hs-source-dirs:  lib
    exposed-modules:
        IssueTracker.BuildUtils,
        IssueTracker.Config,
        IssueTracker.DatabaseConnectionPool,
        IssueTracker.Logger,
        IssueTracker.Options,
        IssueTracker.Web.Application
    other-modules:
        IssueTracker.TH,
        IssueTracker.Web.ContentTypes,
        IssueTracker.Web.Routes,
        IssueTracker.Web.Routes.EntityTypes,
        IssueTracker.Web.Routes.Projects,
        IssueTracker.Web.Routes.Site,
        IssueTracker.Web.Routes.Site.Bundles,
        IssueTracker.Web.RouteHandler
    build-depends:
        aeson,
        AesonBson,
        bson,
        bytestring,
        clock,
        containers,
        entity-service,
        fast-logger,
        free,
        hashable,
        http-media,
        http-types,
        jose-jwt,
        json-config,
        lens,
        list-t,
        mtl,
        neat-interpolation,
        optparse-applicative,
        postgresql-simple,
        process,
        resource-pool,
        servant,
        servant-foreign,
        servant-js,
        servant-server,
        sqlite-simple,
        stm-containers,
        template-haskell,
        text,
        time,
        uuid,
        wai

-- http server - backend of the issue-tracker application
executable web
    import: shared-properties
    build-depends:
        issue-tracker,
        postgresql-simple,
        warp
    hs-source-dirs: app
    main-is:        IssueTracker/App/Web.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -main-is IssueTracker.App.Web

---- code generator - produces javascript functions to make requests to backend rest end points
--executable generate-js-bindings
--    import: shared-properties
--    build-depends:
--        issue-tracker
--    hs-source-dirs: app
--    main-is:        IssueTracker/App/GenerateJsBindings.hs
--    ghc-options:    -Wall -threaded -main-is IssueTracker.App.GenerateJsBindings
--
---- utility for testing - prints out a valid auth token for a randomly generated user id
--executable make-auth-token
--    import: shared-properties
--    build-depends:
--        issue-tracker
--    hs-source-dirs: app
--    main-is:        IssueTracker/App/MakeAuthToken.hs
--    ghc-options:    -Wall -threaded -main-is IssueTracker.App.MakeAuthToken

-- initialize the database, etc.
executable init
    import: shared-properties
    build-depends:
        issue-tracker,
        postgresql-migration,
        postgresql-simple,
        text
    hs-source-dirs: app
    main-is:        IssueTracker/App/Init.hs
    ghc-options:    -Wall -threaded -main-is IssueTracker.App.Init

executable dev-server
    import: shared-properties
    build-depends:
        dev-server
    hs-source-dirs: app/dev-server
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

