cabal-version:      3.8
name:               issue-tracker
version:            0.1.0.0

common shared-properties
    default-language: GHC2021
    ghc-options: -Wall
    build-depends:
        base < 5.0
    default-extensions:
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        GADTs,
        LambdaCase,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        RecordWildCards,
        TypeFamilies

library
    import: shared-properties
    hs-source-dirs:  lib
    exposed-modules:
        IssueTracker.BuildUtils,
        IssueTracker.Config,
        IssueTracker.DatabaseConnectionPool,
        IssueTracker.Logger,
        IssueTracker.Options,
        IssueTracker.Web.Application
    other-modules:
        IssueTracker.TH,
        IssueTracker.Web.ContentTypes,
        IssueTracker.Web.Routes,
        IssueTracker.Web.Routes.Attributes,
        IssueTracker.Web.Routes.Entities,
        IssueTracker.Web.Routes.EntityTypes,
        IssueTracker.Web.Routes.Projects,
        IssueTracker.Web.Routes.Site,
        IssueTracker.Web.Routes.Site.Bundles,
        IssueTracker.Web.RouteHandler
    build-depends:
        aeson,
        AesonBson,
        bson,
        bytestring,
        clock,
        containers,
        entity-service,
        fast-logger,
        free,
        hashable,
        http-media,
        http-types,
        jose-jwt,
        json-config,
        lens,
        list-t,
        mtl,
        neat-interpolation,
        optparse-applicative,
        postgresql-simple,
        process,
        resource-pool,
        servant,
        servant-foreign,
        servant-js,
        servant-server,
        sqlite-simple,
        stm-containers,
        template-haskell,
        text,
        time,
        uuid,
        wai

-- http server - backend of the issue-tracker application
executable api
    import: shared-properties
    build-depends:
        issue-tracker,
        postgresql-simple,
        warp
    hs-source-dirs: app/api
    main-is:        Main.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -main-is Main

-- delete all data and re-initialize
executable init
    import: shared-properties
    build-depends:
        issue-tracker,
        postgresql-migration,
        postgresql-simple,
        text
    hs-source-dirs: app/init
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

-- execute sql migration scripts
executable migrate
    import: shared-properties
    build-depends:
        issue-tracker,
        optparse-applicative,
        postgresql-migration,
        postgresql-simple,
        text
    other-modules:
        CommandLineArgs
    hs-source-dirs: app/migrate
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

executable admin
    import: shared-properties
    build-depends:
        issue-tracker,
    hs-source-dirs: app/admin
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

executable dev-server
    import: shared-properties
    build-depends:
        dev-server
    hs-source-dirs: app/dev-server
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

