cabal-version:      2.4
name:               server
version:            0.1.0.0

executable server
    main-is:          Main.hs
    other-modules:
        ApiV1,
        Application,
        Args,
        Auth,
        Config,
        ContentTypes,
        GenerateJsBindings,
        JsBundle,
        Language,
        Model,
        ObjectId,
        Site
    build-depends:
        aeson,
        AesonBson,
        base ^>=4.16.1.0,
        bson,
        bytestring,
        containers,
        free,
        hashable,
        http-media,
        http-types,
        jose-jwt,
        json-config,
        lens,
        mtl,
        mongoDB ==2.7.1.1,
        neat-interpolation,
        optparse-applicative,
        servant,
        servant-foreign,
        servant-js,
        servant-server,
        stm-containers,
        text,
        time,
        uuid,
        wai,
        warp
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DataKinds,
        DeriveFunctor,
        DeriveGeneric,
        FlexibleContexts,
        FlexibleInstances,
        GADTs,
        LambdaCase,
        MultiParamTypeClasses,
        NamedFieldPuns,
        OverloadedStrings,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TypeApplications,
        TypeFamilies,
        TypeOperators

