cabal-version:      3.6
name:               issues
version:            0.1.0.0

common shared-properties
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ^>=4.16.1.0
    default-extensions:
        DataKinds,
        DeriveFunctor,
        DeriveGeneric,
        DuplicateRecordFields,
        FlexibleContexts,
        FlexibleInstances,
        GADTs,
        LambdaCase,
        MultiParamTypeClasses,
        NamedFieldPuns,
        OverloadedStrings,
        PolyKinds,
        QuasiQuotes,
        RankNTypes,
        RecordWildCards,
        ScopedTypeVariables,
        StandaloneDeriving,
        TypeApplications,
        TypeFamilies,
        TypeOperators

library
    import: shared-properties
    hs-source-dirs:  lib
    exposed-modules:
        Issues.Lib.Auth,
        Issues.Lib.Config,
        Issues.Lib.ContentTypes,
        Issues.Lib.GenerateJsBindings,
        Issues.Lib.Language,
        Issues.Lib.Language.AppL,
        Issues.Lib.Language.RunTime,
        Issues.Lib.Language.Interpreter.InMemory,
        Issues.Lib.Logger,
        Issues.Lib.Model,
        Issues.Lib.ObjectId,
        Issues.Lib.Web.ApiV1,
        Issues.Lib.Web.Application,
        Issues.Lib.Web.JsBundle,
        Issues.Lib.Web.Options,
        Issues.Lib.Web.Site
    build-depends:
        aeson,
        AesonBson,
        bson,
        bytestring,
        clock,
        containers,
        fast-logger,
        free,
        hashable,
        http-media,
        http-types,
        jose-jwt,
        json-config,
        lens,
        list-t,
        mtl,
        mongoDB ==2.7.1.1,
        neat-interpolation,
        optparse-applicative,
        servant,
        servant-foreign,
        servant-js,
        servant-server,
        stm-containers,
        text,
        time,
        uuid,
        wai

-- http server - backend of the issues application
executable web
    import: shared-properties
    build-depends:
        issues,
        stm-containers,
        warp
    hs-source-dirs: app
    main-is:        Issues/App/Web.hs
    ghc-options:    -Wall -threaded -main-is Issues.App.Web

-- code generator - produces javascript functions to make requests to backend rest end points
executable generate-js-bindings
    import: shared-properties
    build-depends:
        issues
    hs-source-dirs: app
    main-is:        Issues/App/GenerateJsBindings.hs
    ghc-options:    -Wall -threaded -main-is Issues.App.GenerateJsBindings

-- utility for testing - prints out a valid auth token for a randomly generated user id
executable make-auth-token
    import: shared-properties
    build-depends:
        issues
    hs-source-dirs:   app
    main-is:          Issues/App/MakeAuthToken.hs
    ghc-options: -Wall -threaded -main-is Issues.App.MakeAuthToken

