cabal-version:      3.8
name:               krinj
version:            0.1.0.0

common shared-properties
    default-language: GHC2021
    ghc-options: -Wall
    build-depends:
        base < 5.0
    default-extensions:
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        GADTs,
        LambdaCase,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        RecordWildCards,
        TypeFamilies

library
    import: shared-properties
    hs-source-dirs:  lib
    exposed-modules:
        Krinj.BuildUtils,
        Krinj.DatabaseConnectionPool,
        Krinj.Logger,
        Krinj.Options,
        Krinj.Web.Application
    other-modules:
        Krinj.TH,
        Krinj.Web.Auth,
        Krinj.Web.ContentTypes,
        Krinj.Web.Routes,
        Krinj.Web.Routes.Auth,
        Krinj.Web.Routes.Attributes,
        Krinj.Web.Routes.Entities,
        Krinj.Web.Routes.EntityTypes,
        Krinj.Web.Routes.Projects,
        Krinj.Web.Routes.Site,
        Krinj.Web.Routes.Site.Bundles,
        Krinj.Web.RouteHandler
    build-depends:
        aeson,
        AesonBson,
        bson,
        bytestring,
        clock,
        common-types,
        containers,
        cookie,
        entity-service,
        fast-logger,
        free,
        hashable,
        http-media,
        http-types,
        jose-jwt,
        json-config,
        lens,
        list-t,
        mtl,
        neat-interpolation,
        optparse-applicative,
        postgresql-simple,
        process,
        resource-pool,
        servant,
        servant-foreign,
        servant-js,
        servant-server,
        sqlite-simple,
        stm-containers,
        template-haskell,
        text,
        time,
        user-service,
        uuid,
        wai

-- http server - backend of the krinj application
executable api
    import: shared-properties
    build-depends:
        base,
        common-types,
        krinj,
        postgresql-simple,
        warp
    hs-source-dirs: app/api
    main-is:        Main.hs
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -main-is Main

-- delete all data and re-initialize
executable init
    import: shared-properties
    build-depends:
        base,
        common-types,
        krinj,
        optparse-applicative,
        postgresql-migration,
        postgresql-simple,
        text
    other-modules:
        CommandLineArgs
    hs-source-dirs: app/init
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

-- execute sql migration scripts
executable migrate
    import: shared-properties
    build-depends:
        base,
        common-types,
        krinj,
        optparse-applicative,
        postgresql-migration,
        postgresql-simple,
        text
    other-modules:
        CommandLineArgs
    hs-source-dirs: app/migrate
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

executable admin
    import: shared-properties
    build-depends:
        base,
        krinj
    hs-source-dirs: app/admin
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

executable dev-server
    import: shared-properties
    build-depends:
        base,
        dev-server
    hs-source-dirs: app/dev-server
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -main-is Main

