cabal-version:      3.4
name:               dev-server
version:            0.1.0.0
author:             josh
maintainer:         jgraydus@gmail.com

executable dev-server
    main-is:          Main.hs
    other-modules:
        DevServer.Client,
        DevServer.Logger,
        DevServer.Server
    build-depends:
        async,
        base,
        cabal-install-parsers,
        fast-logger,
        fsnotify,
        text,
        typed-process,
        utf8-string,
        websockets
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        LambdaCase,
        OverloadedStrings,
        RecordWildCards

