cabal-version:      3.8
name:               entity-service
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Krinj.EntityService,
    other-modules:
        Krinj.EntityService.Class,
        Krinj.EntityService.Instance,
        Krinj.EntityService.Internal,
        Krinj.EntityService.Internal.Command,
        Krinj.EntityService.Internal.Command.Attributes,
        Krinj.EntityService.Internal.Command.Entities,
        Krinj.EntityService.Internal.Command.EntityTypes,
        Krinj.EntityService.Internal.Command.Projects,
        Krinj.EntityService.Internal.Command.Relationships,
        Krinj.EntityService.Internal.Model,
        Krinj.EntityService.Internal.Model.Attributes,
        Krinj.EntityService.Internal.Model.Entities,
        Krinj.EntityService.Internal.Model.EntityTypes,
        Krinj.EntityService.Internal.Model.Newtypes,
        Krinj.EntityService.Internal.Model.Projects,
        Krinj.EntityService.Internal.Model.Relationships,
        Krinj.EntityService.Internal.Util,
        Krinj.EntityService.Internal.Query,
        Krinj.EntityService.Internal.Query.Attributes,
        Krinj.EntityService.Internal.Query.Entities,
        Krinj.EntityService.Internal.Query.EntityTypes,
        Krinj.EntityService.Internal.Query.Projects,
        Krinj.EntityService.Internal.Query.Relationships
    build-depends:
        aeson,
        base ^>=4.17.0.0,
        containers,
        http-api-data,
        lens,
        mtl,
        opaleye,
        postgresql-simple,
        product-profunctors,
        resource-pool,
        text,
        time,
        uuid
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        LambdaCase,
        OverloadedRecordDot,
        RecordWildCards

test-suite entity-service-test
    import:           warnings
    default-language: GHC2021
    other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        entity-service

