cabal-version:      3.4
name:               user-service
version:            0.1.0.0
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Krinj.UserService
    other-modules:
        Krinj.UserService.Class
        Krinj.UserService.Command
        Krinj.UserService.Hash
        Krinj.UserService.Instance
        Krinj.UserService.Model
        Krinj.UserService.Model.Credentials
        Krinj.UserService.Model.Users
        Krinj.UserService.Types
        Krinj.UserService.Query
    build-depends:
        base ^>=4.17.2.0,
        common-types,
        cryptonite,
        mtl,
        opaleye,
        postgresql-simple,
        product-profunctors,
        resource-pool,
        text,
        uuid
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds,
        DerivingStrategies,
        DuplicateRecordFields,
        OverloadedRecordDot,

test-suite user-service-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        common-types,
        containers,
        hspec,
        mtl,
        postgresql-simple,
        resource-pool,
        test-util,
        text,
        user-service
    default-extensions:
        OverloadedRecordDot,
        OverloadedStrings

